fix: png to jpg converting issue